compare2 (with opacity) view covers compare1 completely (issue not covering visible parts of image1 if heights differ)

--- a/less/includes/result.less
+++ b/less/includes/result.less
@@ -30,13 +30,12 @@
 		}
 
 		&2 {
+			background-color: #ffffff;
+			bottom: 0px;
 			left: 0px;
 			position: absolute;
 			top: 0px;
-
-			img {
-				opacity: 0.5;
-			}
+			opacity: 0.5;
 		}
 
 		&-sensor {
